reconhecimento de voz v3

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="info">
         <h1>Acerte o Número Secreto</h1>
-        <h3> O número secreto esta entre número secreto:
+        <h3> O número secreto esta entre:
             <span data-id="menor-valor"></span> -
             <span data-id="maior-valor"></span>
         </h3>
